snackager/k8s/production/deployment-increase-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snackager
spec:
  replicas: 2
