snackager/k8s/production/deployment-prod-pool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snackager
spec:
  template:
    spec:
      nodeSelector:
        pool: prod
      tolerations:
      - key: dedicated
        value: prod
        effect: NoSchedule
