snackager/k8s/production/ingress-spec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackager
spec:
  tls:
  - hosts:
    - snackager.expo.io
    secretName: snackager-tls
  rules:
    - host: snackager.expo.io
      http:
        paths:
        - backend:
            service:
              name: snackager
              port:
                number: 80
          path: /
          pathType: Prefix
